--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/dist/main.js"></script>
+    <script src="/dist/sub.js"></script>
 </head>
 
 <body>
